# IMA-Sensacional

./: .gitignore  .gitmodules
sensa-v0.1/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
sensa-v0.1/board/: CMakeLists.txt  esp32s2_sensacional.c
sensa-v0.1/board/include/: esp32s2_sensacional.h
sensa-v0.1/components/Sensor_BME280/: CMakeLists.txt  bme280.c
sensa-v0.1/components/Sensor_SGP40/: CMakeLists.txt  sgp40.c
sensa-v0.1/components/Sensor_SGP40/include/: sgp40.h
sensa-v0.1/components/Sensor_SGP40/test/: CMakeLists.txt  test_contents.c
sensa-v0.1/components/Wrapper_BME280/: CMakeLists.txt  wrapper_bme280.c
sensa-v0.1/components/Wrapper_SGP40/: CMakeLists.txt  sensirion_i2c_hal_esp32.c
sensa-v0.1/components/fsm/: CMakeLists.txt
sensa-v0.1/components/sensirion/: CMakeLists.txt  sensirion_i2c_hal.c
sensa-v0.1/main/: CMakeLists.txt  main.c  mqtt.c  mqtt.h
